# sporty

./: .gitignore  main.py  nginx.conf  pyproject.toml  requirements.txt  sporty.service  sporty.socket
core/: settings.py  urls.py
grand/: admin.py  context_processors.py  models.py  serializers.py  urls.py  views.py
grand/migrations/: 0007_alter_studentfiles_unique_together.py  0008_studentfiles_is_scored_alter_student_avg_gpa_and_more.py
grand/templatetags/: custom_filters.py
static/assets/css/: main.css
templates/: 404.html  base.html  faculty-students.html  faculty_list.html  homepage.html  login.html  pdf_template.html  profile.html  score_file.html  social_score_table.html  student_files.html  upload_file.html
