[project]
name = "sporty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.2",
    "django-cors-headers>=4.9.0",
    "django-import-export>=4.4.0",
    "djangorestframework>=3.16.1",
    "openpyxl>=3.1.5",
    "pillow>=12.1.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "weasyprint>=68.1",
]
